# ParkDirectories

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  common.sh  defaults.sh  dothis.sh  install.sh  pd.sh  pkd.py  pkd.sh  todo.md  uninstall.sh  update.sh
.github/workflows/: ci.yml  release.yml
archive/: README.md  install.sh  pd-return-codes.md  uninstall.sh  update.sh
docs/: PRD.md  TDD.md  backlog.md
docs/adr/: ADR-001-rust-binary-core.md  ADR-002-hybrid-shell-integration.md  ADR-003-shared-bookmark-store.md  ADR-004-binary-owns-cli-interface.md
src/: bookmarks.rs  cli.rs  commands.rs  error.rs  init.rs  main.rs  resolve.rs
tests/: cli.rs
